# libcppwrap

./: CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml  doxygen.yml
cmake/: cppwrapConfig.cmake
docs/: Doxyfile  index.md
include/w/: assert.hpp  handle.hpp  iterators.hpp  linux.hpp  posix.hpp  sockets.hpp
include/wx/: ipv6.hpp  slurp.hpp  string.hpp
src/w/: linux.cpp  posix.cpp  sockets.cpp
src/wx/: ipv6.cpp  slurp.cpp
